--- a/styles/main.css
+++ b/styles/main.css
@@ -110,9 +110,7 @@ posicionamento, alinhamentos
     background-color: var(--primary-color);
 
     transition: 400ms;
-
-    font-weight: bold;
-    color: white;
+    
 }
  
 #page-home main a:hover{
@@ -132,10 +130,50 @@ posicionamento, alinhamentos
 
 
     background-color: rgba(0,0,0,0.08);
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-/* .red{
-    background-color: red;  //cor de fundo 
-} 
-*/
+#page-home main a span::after { 
+    content: "";
+    background-image: url('../assent/search.svg');
+
+    width: 20px;
+    height: 20px;
+
+}
+
+#page-home main a strong{
+    flex: 1;
+    color: white;
+
+    text-align: center;
+}
+
+@media ( max-width: 900px){
+    #page-home{
+        background-position-x: 70vw;
+    }
+
+    #page-home .content{
+        align-items: center;
+        text-align: center;
+    }
+
+    #page-home header a{
+        position: absolute;
+        bottom: 48px;
+
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
+    #page-home main{
+        align-items: center;
+    }
+}
+
+
 
